Estados inicial y final

--- a/mds2022/1-fundamentos/modelo-connect4.adoc
+++ b/mds2022/1-fundamentos/modelo-connect4.adoc
@@ -44,7 +44,40 @@ Goal <|-d- Diagonal
 [plantuml, DiagramaInitialState, svg]
 ....
 
-class Connect4
+object Game
+object Player1
+object RedToken1
+object RedTokenN
+object RedToken21
+object Board
+object Turn
+object Player2
+object YelowToken1
+object YelowTokenN
+object YelowToken21
+object Position1x1
+object PositionNxM
+object Position6x7
+
+Game *-> Turn
+Game *-d--> Player1
+Game *-d--> Player2
+Game *-> Board
+
+Turn -d-> Player1
+Turn -d-> Player2
+
+Board *-d-> Position1x1
+Board *-d-> PositionNxM
+Board *-d-> Position6x7
+
+Player1 *--> RedToken1
+Player1 *--> RedTokenN
+Player1 *--> RedToken21
+
+Player2 *--> YelowToken1
+Player2 *--> YelowTokenN
+Player2 *--> YelowToken21
 
 ....
 
@@ -53,7 +86,54 @@ class Connect4
 [plantuml, DiagramaFinalState, svg]
 ....
 
-class Connect4
+object Game
+object Player1
+object RedToken1
+object RedTokenN
+object RedToken21
+object Board
+object Turn
+object Player2
+object YelowToken1
+object YelowTokenN
+object YelowToken21
+object Position1x1
+object Position1x2
+object Position1x3
+object Position1x4
+object PositionNxM
+object Position6x7
+
+Game *--> Turn
+Game *--> Player1
+Game *--> Player2
+Game *--> Board
+
+Turn --> Player1
+Turn --> Player2
+
+Board *-u-> Position1x1
+Board *-u-> Position1x2
+Board *-u-> Position1x3
+Board *-u-> Position1x4
+Board *-u-> PositionNxM
+Board *-u-> Position6x7
+
+Player1 *--> RedToken1
+Player1 *--> RedTokenN
+Player1 *--> RedToken21
+
+Player2 *--> YelowToken1
+Player2 *--> YelowTokenN
+Player2 *--> YelowToken21
+
+RedToken1 --> Position1x1
+RedTokenN --> Position1x2
+RedToken21 --> Position1x3
+
+YelowToken1 --> Position1x4
+YelowTokenN --> PositionNxM
+YelowToken21 --> Position6x7
 
 ....
 
